--- a/index.html
+++ b/index.html
@@ -42,12 +42,10 @@
     <!-- The donation widget will be rendered here -->
     <donation-widget 
       recipient="0x47ed7aebc3fd99156f455352f8edf820823a0d05"
-      recipient-chain="56"
-      recipient-token="0x55d398326f99059fF775485246999027B3197955"
-      project-id="%VITE_PROJECT_ID%"
-      api-key="%VITE_LIFI_API_KEY%"
-      default-token="ETH"
-      default-chain="1"
+      recipient-chain-id="56"
+      recipient-token-address="0x55d398326f99059fF775485246999027B3197955"
+      reown-project-id="%VITE_PROJECT_ID%"
+      lifi-api-key="%VITE_LIFI_API_KEY%"
       theme="auto">
     </donation-widget>
   </div>
