Update script references in README and example files to use non-module version of donation widget.

--- a/examples/javascript-api.html
+++ b/examples/javascript-api.html
@@ -209,7 +209,7 @@
   </div>
 
   <!-- Load widget script -->
-  <script type="module" src="../dist/donation-widget.es.js"></script>
+  <script src="../dist/donation-widget.js"></script>
   
   <script>
     // Get widget reference
