Refactor donation widget to integrate 1inch API and update related components
- Replace LiFi API references with 1inch API in the donation widget and related components.
- Update configuration files to reflect the new 1inch API key requirement.
- Refactor services to utilize OneInchService for handling cross-chain transactions.
- Modify README and example files to guide users on using the 1inch API.
- Ensure backward compatibility by retaining LiFiService exports during the transition.

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         recipient-chain-id="56"
         recipient-token-address="0x55d398326f99059fF775485246999027B3197955"
         reown-project-id="%VITE_PROJECT_ID%"
-        lifi-api-key="%VITE_LIFI_API_KEY%"
+        oneinch-api-key="%VITE_1INCH_API_KEY%"
         theme="auto"
       >
       </donation-widget>
