Enhance donation widget success state and confetti features
- Introduced new optional attributes for the donation widget: `success-message`, `donate-again-text`, `confetti-enabled`, and `confetti-colors` to allow for greater customization of the success state.
- Added a new `success-state` component to display transaction details and celebratory animations after a successful donation.
- Implemented a `confetti-animation` component to visually enhance the success state with customizable confetti effects.
- Updated the README to include detailed descriptions of the new attributes and examples for customization.
- Added integration and unit tests for the new components to ensure functionality and reliability.

--- a/examples/javascript-api.html
+++ b/examples/javascript-api.html
@@ -261,9 +261,9 @@
 
       widget.addEventListener("donation-completed", (e) => {
         logEvent("donation-completed", {
-          txHash: e.detail.txHash?.substring(0, 10) + "...",
           amount: e.detail.amount,
           token: e.detail.token?.symbol,
+          recipient: e.detail.recipient,
         }, "success");
       });
 
