--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
         recipient="0x47ed7aebc3fd99156f455352f8edf820823a0d05"
         recipient-chain-id="56"
         recipient-token-address="0x55d398326f99059fF775485246999027B3197955"
+        default-amount="10"
         reown-project-id="%VITE_PROJECT_ID%"
         lifi-api-key="%VITE_LIFI_API_KEY%"
         theme="auto"
