Refactor subscription UI into separate setup and progress screens

--- a/index.html
+++ b/index.html
@@ -43,10 +43,9 @@
       <h1>Donation Widget Development</h1>
 
       <!-- The donation widget will be rendered here -->
+      <!-- Recipients always receive USDC on Polygon -->
       <donation-widget
         recipient="0x9f794fc42d9b00d52c02a1cc84d3b78fddb5c210"
-        recipient-chain-id="137"
-        recipient-token-address="0x3c499c542cEF5E3811e1192ce70d8cC03d5c3359"
         default-amount="10"
         reown-project-id="%VITE_PROJECT_ID%"
         theme="auto"
